# fmt

./: .gitignore  LICENSE  Makefile  NOTICE  README.md  rebar.config
.claude/: settings.local.json
bench/: pe_bench  pe_oracle
priv/: lfe-format-rules.eterm
src/: fmt.app.src  fmt.erl  lfmt.app.src  lfmt.erl  lfmt.hrl  lfmt_engine.erl  lfmt_fezzik.erl  lfmt_fezzik.hrl  lfmt_fezzik_cst.erl  lfmt_fezzik_lexer.erl  lfmt_fezzik_render.erl  lfmt_fezzik_util.erl  pe.erl  pe_cost.erl  pe_cost_overflow.erl  pe_cost_squared.erl  pe_doc.erl  pe_lfe.erl  pe_lfe_cst.erl  pe_lfe_scan.erl  pe_measure.erl  pe_memo.erl  pe_memo_ets.erl  pe_memo_map.erl  pe_memo_pd.erl  pe_mset.erl  pe_render.erl  pe_resolve.erl  r3lfe_format_cst.erl  r3lfe_format_lexer.erl  r3lfe_formatter.erl
test/: lfmt_SUITE.erl  lfmt_fezzik_SUITE.erl  lfmt_fezzik_cst_SUITE.erl  lfmt_fezzik_lexer_SUITE.erl  linearity_SUITE.erl  memo_parity_SUITE.erl  pe_algebra_tests.erl  pe_cost_crash.erl  pe_cost_tests.erl  pe_doc_tests.erl  pe_frontier_tests.erl  pe_gen.erl  pe_lfe_bench.erl  pe_lfe_bench_tests.erl  pe_lfe_cst_tests.erl  pe_lfe_literal_tests.erl  pe_lfe_read.erl  pe_lfe_read_tests.erl  pe_lfe_registry_tests.erl  pe_lfe_roundtrip_tests.erl  pe_lfe_samples.erl  pe_lfe_samples_tests.erl  pe_lfe_scan_tests.erl  pe_lfe_stress.erl  pe_lfe_stress_tests.erl  pe_lfe_tests.erl  pe_measure_tests.erl  pe_mset_tests.erl  pe_oracle_mjl.erl  pe_oracle_tests.erl  pe_render_tests.erl  pe_resolve_tests.erl  pe_tests.erl  pe_wire_tests.erl  prop_pe_cost.erl  prop_pe_doc.erl  (+8 more)
test/oracle/: Cargo.toml
test/oracle/src/: main.rs
(+200 files in other folders)
